--- a/templates/index.html
+++ b/templates/index.html
@@ -25,14 +25,22 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: relative;
+            z-index: 1000;
         }
+      
+        .nav-links {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+    }
 
         .navbar a {
             color: black;
             text-decoration: none;
             margin: 0 15px;
-            font-weight: 550;
-            font-size: large;
+            font-weight: 505;
+            font-size: 17px;
         }
 
         .navbar a:hover {
@@ -42,9 +50,9 @@
         .login-btn {
             background-color: #6a1b9a;
             color: white;
-            border-radius: 20px;
-            padding: 8px 20px;
-            font-weight: 550;
+            border-radius: 50px;
+            padding: 5px 17px;
+            font-weight: 505;
             text-transform: uppercase;
             text-decoration: none;
         }
@@ -58,16 +66,31 @@
             font-size: 2em;
         }
       
+        .hamburger {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+      gap: 5px;
+    }
+
+    .hamburger div {
+      width: 25px;
+      height: 3px;
+      background-color: #6a1b9a;
+      transition: 0.4s;
+    }
+    .main-content h1 {
+      font-size: 40px;
+    }
+
+
       .main-content {
       text-align: center;
       margin: 60px auto;
       max-width: 50%;
     }
 
-    .main-content h1 {
-      font-size: 40px;
-    }
-
+    
     .upload-box {
       background-color: white;
       padding: 30px;
@@ -103,21 +126,68 @@
       font-weight: bold;
       color: #2e7d32;
     }
+    .logo img{
+      height: 50px;
+    }
+    @media (max-width: 768px) {
+      .nav-links {
+        display: none;
+        position: absolute;
+        top: 70px;
+        right: 20px;
+        background-color: white;
+        flex-direction: column;
+        width: 200px;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+      }
+      .nav-links.active {
+        display: flex;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+      .navbar .logo img{
+        height:30px;
+      }
+      .main-content {
+        margin: 60px auto;
+      }
+
+      .main-content h1 {
+                font-size: 28px !important; /* Smaller text for mobile */
+            }
+      
+      .text {
+        font-size: 12px;
+      }
+        
+    }
     </style>
 </head>
 
 <body>
     <div class="navbar">
         <div class="logo">
-            <h2><span style="color: black;">Resume</span> <span style="color: purple;">Analyzer</span></h2>
+          <a href="/home">
+            <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" >
+          </a>
         </div>
-        <div>
+
+        <div class="hamburger" onclick="toggleMenu()">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
+        <div class="nav-links" id="navLinks">
+          
             <a href="/home">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
             <a href="#">Testimonials</a>
             {% if current_user.is_authenticated %}
-            <a class="login-btn" href="/history">History</a> |
+            <a class="login-btn" href="/history">History</a> 
             <a class="login-btn" href="/logout">Logout</a>
           {% else %}
             <a class="login-btn" href="/login">Login</a> 
@@ -129,7 +199,7 @@
       <section class="main-section">
     <div class="main-content">
       <h1>Analyze Your Resume with a single click</h1>
-      <p>Upload your resume to get a job role prediction and score based on structure, skills, and experience</p>
+      <p class="text">Upload your resume to get a job role prediction and score based on structure, skills, and experience</p>
       <div class="upload-box">
         <p>Drop your resume here or choose a file.<br>PDF & DOCX only. Max 2MB file size.</p>
         
@@ -145,6 +215,11 @@
   </section>
 
   <script>
+
+function toggleMenu() {
+      document.getElementById('navLinks').classList.toggle('active');
+    }
+
     document.getElementById('resumeInput').addEventListener('change', function () {
   if (this.files.length) {
     document.getElementById('resumeForm').submit();
